--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,22 +5,17 @@ on:
     branches:
       - master
       - github-actions
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Docker Image Tag'
-        required: true
+    tags:
+      - "*"
 
 jobs:
-  build-test-publish:
-    name: Build, Test, Publish
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        distro:
-          - centos-7
-          - bionic
+        distro: [centos-7, bionic]
 
     steps:
     - name: Checkout
@@ -47,6 +42,16 @@ jobs:
         push: true
         tags: ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }}
 
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: build
+
+    strategy:
+      matrix:
+        distro: [centos-7, bionic]
+
+    steps:
     - name: Checkout CKB
       uses: actions/checkout@v2
       with:
@@ -55,7 +60,25 @@ jobs:
 
     - name: Build CKB
       run: |
-        docker run --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} make prod
+        docker run --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} 'make prod'
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+
+    strategy:
+      matrix:
+        distro: [centos-7, bionic]
+
+    steps:
+    - name: Login to ghcr
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.CR_USERNAME }}
+        password: ${{ secrets.CR_PAT }}
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
@@ -63,13 +86,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Determine tag
+      id: tag
+      run: echo "::set-output name=tag::${GITHUB_REF##*/}"
+
     - name: Tag and push image
-      if: ${{ github.event.inputs.tag != '' }}
       uses: akhilerm/tag-push-action@v1.0.0
       with:
         src: ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }}
         dst: |
           ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-latest
-          ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.event.inputs.tag }}
+          ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ steps.tag.outputs.tag }}
           nervos/ckb-docker-builder:${{ matrix.distro }}-latest
           nervos/ckb-docker-builder:${{ matrix.distro }}-${{ github.event.inputs.tag }}
