--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,15 +14,22 @@ jobs:
 
     strategy:
       matrix:
-        distro: [centos-7, bionic, aarch64]
+        include:
+          - distro: centos-7
+            platform: linux/amd64
+          - distro: bionic
+            platform: linux/amd64
+          - distro: aarch64
+            platform: linux/arm64
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up docker buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
       with:
         version: latest
 
@@ -34,10 +41,11 @@ jobs:
         password: ${{ secrets.CR_PAT }}
 
     - name: Build
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         file: ${{ matrix.distro }}/Dockerfile
         context: .
+        platforms: ${{ matrix.platform }}
         push: true
         tags: ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }}
 
@@ -48,7 +56,13 @@ jobs:
 
     strategy:
       matrix:
-        distro: [centos-7, bionic, aarch64]
+        include:
+          - distro: centos-7
+            platform: linux/amd64
+          - distro: bionic
+            platform: linux/amd64
+          - distro: aarch64
+            platform: linux/arm64
 
     steps:
     - name: Checkout CKB
@@ -58,6 +72,8 @@ jobs:
         path: ckb
 
     - name: Build CKB
+      with:
+        platforms: ${{ matrix.platform }}
       run: |
         docker run --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} make prod
 
@@ -80,7 +96,7 @@ jobs:
         password: ${{ secrets.CR_PAT }}
 
     - name: Login to DockerHub
-      uses: docker/login-action@v1 
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
