--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -72,10 +72,8 @@ jobs:
         path: ckb
 
     - name: Build CKB
-      with:
-        platforms: ${{ matrix.platform }}
       run: |
-        docker run --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} make prod
+        docker run --platform ${{matrix.platform}} --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} make prod
 
   publish:
     name: Publish
