add setup QEMU in test

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -65,6 +65,9 @@ jobs:
             platform: linux/arm64
 
     steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Checkout CKB
       uses: actions/checkout@v2
       with:
