--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - trying
     tags:
       - "*"
 
@@ -15,10 +16,6 @@ jobs:
     strategy:
       matrix:
         include:
-          - distro: centos-7
-            platform: linux/amd64
-          - distro: bionic
-            platform: linux/amd64
           - distro: aarch64
             platform: linux/arm64
 
@@ -49,39 +46,10 @@ jobs:
         push: true
         tags: ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }}
 
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    needs: build
-
-    strategy:
-      matrix:
-        include:
-          - distro: centos-7
-            platform: linux/amd64
-          - distro: bionic
-            platform: linux/amd64
-          - distro: aarch64
-            platform: linux/arm64
-
-    steps:
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Checkout CKB
-      uses: actions/checkout@v2
-      with:
-        repository: nervosnetwork/ckb
-        path: ckb
-
-    - name: Build CKB
-      run: |
-        docker run --platform ${{matrix.platform}} --rm -i -w /ckb -v $(pwd)/ckb:/ckb ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }} make prod
-
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
 
     strategy:
