--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -50,11 +50,10 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
 
     strategy:
       matrix:
-        distro: [centos-7, bionic, aarch64]
+        distro: [aarch64]
 
     steps:
     - name: Login to ghcr
@@ -72,7 +71,7 @@ jobs:
 
     - name: Determine tag
       id: tag
-      run: echo "::set-output name=tag::${GITHUB_REF##*/}"
+      run: echo "::set-output name=tag::rust-1.71.0-openssl-3.1.3"
 
     - name: Tag and push image
       run: |
