--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -86,7 +86,13 @@ jobs:
 
     strategy:
       matrix:
-        distro: [centos-7, bionic, aarch64]
+        include:
+          - distro: centos-7
+            platform: linux/amd64
+          - distro: bionic
+            platform: linux/amd64
+          - distro: aarch64
+            platform: linux/arm64
 
     steps:
     - name: Login to ghcr
@@ -109,7 +115,7 @@ jobs:
     - name: Tag and push image
       run: |
         SRC_TAG=ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ github.sha }}
-        docker pull "$SRC_TAG"
+        docker pull --platform ${{matrix.platform}} "$SRC_TAG"
         docker tag "$SRC_TAG" ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-latest
         docker push ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-latest
         docker tag "$SRC_TAG" ghcr.io/nervosnetwork/ckb-docker-builder:${{ matrix.distro }}-${{ steps.tag.outputs.tag }}
