--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v6
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -34,14 +34,14 @@ jobs:
         version: latest
 
     - name: Login to ghcr
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ secrets.CR_USERNAME }}
-        password: ${{ secrets.CR_PAT }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         file: ${{ matrix.distro }}/Dockerfile
         context: .
@@ -69,7 +69,7 @@ jobs:
       uses: docker/setup-qemu-action@v3
 
     - name: Checkout CKB
-      uses: actions/checkout@v2
+      uses: actions/checkout@v6
       with:
         repository: nervosnetwork/ckb
         path: ckb
@@ -105,8 +105,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ secrets.CR_USERNAME }}
-        password: ${{ secrets.CR_PAT }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Login to DockerHub
       uses: docker/login-action@v1
