--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    permissions:
+      packages: write
+
     strategy:
       matrix:
         include:
@@ -89,6 +92,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
+
+    permissions:
+      packages: write
 
     strategy:
       matrix:
